# cambio

./: .gitignore  Cargo.toml  all.sql  core.sql  core_procedures.sql  init_db.sql  ledger.sql  order.sql  procedures.sql  utils.sql
casa/: .gitignore  Cargo.toml  README.md  config.test.toml  run_eth.sh  run_server.sh  run_tests.sh  shit.sh
casa/crud/: Cargo.toml
casa/crud/src/: lib.rs
casa/sql/: all.sql  assets.sql  core_procedures.sql  country.sql  ethereum.sql  init_db.sql  ledger.sql  media.sql  order.sql  payments.sql  procedures.sql  profile.sql  users.sql
casa/sql_id/: Cargo.toml
casa/sql_id/src/: lib.rs
casa/src/: .gitignore  config.test.toml  cors_middleware.rs  init_api.rs  main.rs
casa/src/api/: account_api_impl.rs  account_api_init.rs  account_api_trait.rs  account_request.rs  api_error.rs  api_handler.rs  api_init.rs  api_request.rs  api_result.rs  api_utils.rs  crypto_account_api.rs  crypto_account_api_request.rs  crypto_account_request.rs  crypto_trade_request.rs  error_location.rs  error_reccomendation.rs  fiat_trade_request.rs  last_change.rs  mod.rs  order_api_impl.rs  order_api_init.rs  order_api_request.rs  order_api_trait.rs  order_buy.rs  order_changes.rs  order_completion_request.rs  order_request.rs  payment_api.rs  payment_api_init.rs  payment_request.rs  personal_details.rs  profile.rs  registration.rs  registration_completion.rs  registration_confirm.rs  registration_info.rs  request_payment_response.rs  resend_email.rs  session_token_source.rs  settlement_api_impl.rs  (+13 more)
casa/src/clerks/: email_clerk.rs  email_request.rs  eth_transfer.rs  ethereum_clerk.rs  ethereum_settlement_clerk.rs  mod.rs
casa/src/config/: email_config.rs  mod.rs  server_config.rs
casa/src/db/: account_repository.rs  account_service.rs  cambio_error.rs  connection_source.rs  db_helper.rs  error_kind.rs  error_reccomendation.rs  ethereum_service.rs  mod.rs  order_service.rs  payment_repository.rs  postgres_helper.rs  postgres_helper_impl.rs  postgres_source.rs  postgres_transaction_helper.rs  profile_service.rs  transaction.rs  transaction_source.rs  try_from_row.rs  try_from_row_error.rs  try_from_row_utils.rs  user_repository.rs  user_service.rs
casa/src/domain/: Registration.rs  account.rs  account_business_type.rs  account_id.rs  account_role.rs  account_set.rs  account_statement.rs  account_status.rs  account_type.rs  address.rs  all.rs  asset_type.rs  big_integer.rs  business_ends.rs  byte_address.rs  code.rs  contact_info.rs  crypto_type.rs  currency.rs  currency_code.rs  decimal.rs  decrypt_error.rs  denom.rs  eth_account.rs  eth_account_id.rs  eth_transfer.rs  eth_transfer_request.rs  ethereum_account_details.rs  ethereum_block.rs  ethereum_outbound_transaction.rs  id.rs  identifier_code.rs  media_file_format.rs  media_resource.rs  mod.rs  order.rs  order_change.rs  order_id.rs  order_settlement.rs  order_settlement_builder.rs  (+34 more)
casa/src/email/: confirmation_request_email.rs  contact_spec.rs  email_client.rs  email_client_error.rs  email_message.rs  message_body.rs  mod.rs  smtp_error.rs  smtp_response.rs  to_email_message.rs
casa/src/event/: blockchain_event.rs  bus.rs  bus_recv_error.rs  bus_send_error.rs  ethereum_event_type.rs  ethereum_transfer_event.rs  event.rs  event_handler.rs  event_key.rs  event_topic.rs  mod.rs  object_event.rs  order_event.rs  order_event_type.rs  registration_event_type.rs  settlement_event.rs  settlement_event_type.rs  user_event_type.rs
casa/src/jobs/: email_request.rs  job_loop.rs  job_request.rs  mod.rs
casa/src/payment/: mod.rs
casa/src/query/: bool_clause.rs  column.rs  field.rs  mod.rs  select_spec.rs  selectable.rs  specifier.rs  table_name.rs  value.rs
casa/src/repositories/: account_repository.rs  eth_account_repository.rs  media_repository.rs  mod.rs  order_repository.rs  payment_api.rs  payment_repository.rs  session_repository.rs  settlement_repository.rs  user_payment_repository.rs  user_repository.rs
casa/src/repository/: account_clause.rs  clause.rs  column_name.rs  creatable.rs  general_clause.rs  mod.rs  readable.rs  repository.rs  retrievable.rs  session_clause.rs  updateable.rs  user_clause.rs
casa/src/services/: account_service.rs  ethereum_service.rs  (+10 more)
casa/try_from_row/: Cargo.toml
(+262 files in other folders)
