[package]
name = "coinera"
version = "0.1.0"
authors = ["Mate Antunovic <just.mate.antunovic@gmail.com>"]

[dependencies]
iron = "0.6.0"
postgres = "0.15.1"
bcrypt = "0.1"
router = "*"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[dependencies.bodyparser]
git = "https://github.com/iron/body-parser.git"
