[package]
name = "coinera"
version = "0.1.0"
authors = ["Mate Antunovic <just.mate.antunovic@gmail.com>"]

[dependencies]
iron = "0.6.0"
postgres = {version = "0.15.1", features = ["with-chrono"]}
bcrypt = "0.1"
router = "*"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
chrono =  { version = "0.4", features = ["serde"] }
time = "*"

[dependencies.bodyparser]
git = "https://github.com/iron/body-parser.git"
