[package]
name = "coinera"
version = "0.1.0"
authors = ["Mate Antunovic <just.mate.antunovic@gmail.com>"]

[dependencies]
iron = "0.6.0"
hyper = "0.10"
postgres = {version = "0.15.1", features = ["with-chrono"]}
bcrypt = "0.1"
router = "*"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
chrono =  { version = "0.4", features = ["serde"] }
time = "*"
checkmail = "0.1.1"
postgres-derive = "0.3"
uuid = "0.4"
r2d2 = "0.8.2"
r2d2_postgres = "0.14.0"
persistent = "0.4.0"
log = "0.4.1"
env_logger = "0.4.3"
iron-cors = "0.7.0"
try_from_row = { path = "try_from_row" }
rand = "^0.3"
base64 = "0.9.0"
openssl = "0.10.2"
rust-crypto = "0.2.36"
web3 = "0.1.0"
hex = "0.3.1"
rlp = "0.2.1"

[dependencies.bodyparser]
git = "https://github.com/iron/body-parser.git"
