[package]
name = "cambio"
version = "0.1.0"
authors = ["Mate Antunovic <just.mate.antunovic@gmail.com>"]

[dependencies]
iron = "0.6.0"
iron-test = "0.6.0"
hyper = "0.10"
postgres = {version = "0.15.1", features = ["with-chrono"]}
bcrypt = "0.2.0"
router = "*"
serde = "1.0.70"
serde_derive = "1.0.34"
serde_json = "1.0"
chrono =  { version = "0.4", features = ["serde"] }
time = "*"
checkmail = "0.1.1"
postgres-derive = "0.3"
uuid = {version = "0.4", features = ["serde", "v4"] }
r2d2 = "0.8.2"
r2d2_postgres = "0.14.0"
persistent = "0.4.0"
log = "0.4.1"
env_logger = "0.4.3"
iron-cors = "0.7.0"
try_from_row = { path = "try_from_row" }
sql_id = { path = "sql_id" }
rand = "^0.5"
base64 = "0.9.0"
openssl = "0.10.2"
rust-crypto = "0.2.36"
ethabi = "5.1.1"
web3 = "0.3.0"
hex = "0.3.1"
rlp = "0.2.1"
secp256k1 = "0.8.1"
byteorder = "1.2.1"
threadpool = "1.7.1"
tokio-postgres = "0.3.0"

[dependencies.params]
git = "https://github.com/iron/params.git"
tag = "0.7.1" 

[dependencies.bodyparser]
git = "https://github.com/iron/body-parser.git"
