[package]
name = "try_from_row"
version = "0.1.0"
authors = ["Mate Antunovic <just.mate.antunovic@gmail.com>"]

[dependencies]
postgres = {version = "0.15.1", features = ["with-chrono"]}
chrono =  { version = "0.4", features = ["serde"] }
time = "*"
syn = "0.12.10"
quote = "0.4.2"

[lib]
proc-macro = true
